added a agoraToken serverSide generating
